# hadamard-transform

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
src/hadamard_transform/: __init__.py
tests/: conftest.py  test_hadamard_transform.py
