[metadata]
name = hadamard-transform
version = 0.1
author = Amit Portnoy
author_email = amit.portnoy@gmail.com
description = An efficient Hadamard transform implementation in PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amitport/hadamard-transform
project_urls =
    Bug Tracker = https://github.com/amitport/hadamard-transform/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    torch >=1.10

[options.extras_require]
test = pytest

[options.packages.find]
where = src